--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 NODE_ENV=development
 
-TELEGRAM_API_ID=
-TELEGRAM_API_HASH=
+TELEGRAM_API_ID=20045757
+TELEGRAM_API_HASH=7d3ea0c0d4725498789bd51a9ee02421
 
 NODE_OPTIONS=
 
