--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "NODE_OPTIONS='' cross-env APP_ENV=development webpack serve --mode development",
+    "dev": "NODE_OPTIONS='' ENV TELEGRAM_API_ID=20045757 TELEGRAM_API_HASH='7d3ea0c0d4725498789bd51a9ee02421' cross-env APP_ENV=development webpack serve --mode development",
     "dev:mocked": "cross-env APP_ENV=test APP_MOCKED_CLIENT=1 webpack serve --mode development --port 1235",
     "build:dev": "webpack --mode development && bash ./deploy/copy_to_dist.sh",
     "build:staging": "cross-env APP_ENV=staging npm run build:dev",
